--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "popp-interfaces",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Collection of POPP interfaces",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/proofofposition/interfaces#readme",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.3"
+    "@openzeppelin/contracts": "^4.7.3",
+    "npmrc": "^1.1.1"
   }
 }
