--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "popp-interfaces",
-  "version": "1.0.11",
-  "description": "Collection of POPP interfaces",
+  "version": "1.1.0",
+  "description": "Collection of interfaces for the Proof of Position Protocol",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
