--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "popp-interfaces",
-  "version": "1.1.1",
+  "version": "2.0.1",
   "description": "Collection of interfaces for the Proof of Position Protocol",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/proofofposition/interfaces#readme",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts-upgradeable": "*",
     "npmrc": "^1.1.1"
   }
 }
